--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,9 @@
 <h3><%= @article.title%></h3>
 <p><%= @article.description%></p>
 
-<%= link_to 'Edit article', edit_article_path(@article)%>
+<p><%= link_to 'Edit article', edit_article_path(@article)%>
+
+| <%= link_to 'Delete article', article_path(@article), method: :delete, data: { confirm: "Are you sure?" }%>
+</p>
 <br>
 <%= link_to 'Back to articles', articles_path%>
