--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,12 @@
-<h1>This is the home page</h1>
-<%= link_to 'All Articles', articles_path%>
-
-<br>
-<%= link_to 'About Page', about_path%>
+<div class="hero">
+  <div class="container z-depth-3 center-align">
+    <br>
+    <br>
+    <h4>A HOME FOR READERS</h4>
+    <%= link_to 'Signup', '#', class: "waves-effect waves-light btn pink" %>
+    <i class="material-icons">face</i>
+    <%= link_to 'All Articles', articles_path, class: "waves-effect waves-light btn pink" %>
+    <br>
+    <br>
+  </div>
+<div>
