--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class="container">
         <% flash.each do |name, msg| %>
           <ul>
-            <li><%= msg %></li>
+            <li class="green-text"><%= msg %></li>
           </ul>
         <% end %>
         <%= yield %>
