make error partial reusable

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'error' %>
+<%= render 'shared/error', obj: @article%>
 <%= form_for @article do |f| %>
   <p>
     <%= f.label :title%><br>
