design articles listing space

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,7 @@
 <h3>Edit article</h3>
 
 <%= render 'form'%>
-
-<%= link_to 'Back to articles', articles_path%> .
+<br>
+<%= link_to 'Back to articles', articles_path, class: "btn lighten-1 pink"%> .
+<br>
+<br>
