--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,10 +8,9 @@
       <div class="col l4 offset-l2 s12">
         <h5 class="white-text">Links</h5>
         <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+          <li><a class="grey-text text-lighten-3" href="/articles/new">New Article</a></li>
+          <li><a class="grey-text text-lighten-3" href="/articles">Articles</a></li>
+          <li><a class="grey-text text-lighten-3" href="/">Home</a></li>
         </ul>
       </div>
     </div>
@@ -19,7 +18,7 @@
   <div class="footer-copyright">
     <div class="container">
     © 2019 Danielshow
-    <a class="grey-text text-lighten-4 right" href="#!">Ooops</a>
+    <a class="grey-text text-lighten-4 right" href="#!">Show for real</a>
     </div>
   </div>
 </footer>
