--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,7 @@
 <h3>Create Article</h3>
 
 <%= render 'form'%>
-<%= link_to 'Back to articles', articles_path%>
+<br>
+<%= link_to 'Back to articles', articles_path, class: "btn pink lighten-1"%>
+<br>
+<br>
