--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,7 @@
         </div>
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4"><%= link_to article.title, article_path(article) %><i class="material-icons right">close</i></span>
-          <p><%= article.description.slice(0, 20)%></p>
+          <p><%= article.description.slice(0, 20)%>......</p>
         </div>
     </div>
   <%end%>
