refactor form, remove redundancy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <br>
     <br>
     <h4>A HOME FOR READERS</h4>
-    <%= link_to 'Signup', '#', class: "waves-effect waves-light btn pink" %>
+    <%= link_to 'Signup', signup_path, class: "waves-effect waves-light btn pink" %>
     <i class="material-icons">face</i>
     <%= link_to 'All Articles', articles_path, class: "waves-effect waves-light btn pink" %>
     <br>
