--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,6 +5,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><%= link_to 'New Article', new_article_path%></li>
         <li><%= link_to 'Articles', articles_path %></li>
+        <li><%= link_to 'Signup', signup_path %></li>
       </ul>
     </div>
     </div>
