create show action and add gravatar image

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,20 +1,4 @@
 <h3> All Articles </h3>
 
-  <% @articles.each do |article| %>
-    <div class="col s12 m12">
-      <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
-      
-        </div>
-        <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4"><%= link_to article.title, article_path(article) %><i class="material-icons right">more_vert</i></span>
-          <p>created: <%= time_ago_in_words(article.created_at) %> ago | last updated: <%= time_ago_in_words(article.updated_at) %> ago</p>
-          <p>Article created by <%= article.user.username.upcase%></p>
-        </div>
-        <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4"><%= link_to article.title, article_path(article) %><i class="material-icons right">close</i></span>
-          <p><%= article.description.slice(0, 20)%>......</p>
-        </div>
-    </div>
-  <%end%>
+<%= render 'articles', obj: @articles%>
 
