--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,12 +2,15 @@
   <div class="col s12 m12">
     <div class="card grey lighten-3">
       <div class="card-content black-text">
+        <div class="center-align">
+          <p>Article created by <%= link_to @article.user.username.upcase, user_path(@article.user)%></p> <br>
+          <%= gravatar_for(@article.user)%><br>
+          <small>created <%= time_ago_in_words(@article.created_at)%> ago | last updated: <%= time_ago_in_words(@article.updated_at)%>
+            ago
+          </small>
+          <br>
+        </div>
         <span class="card-title center-align"><%= @article.title%></span>
-        <small>created <%= time_ago_in_words(@article.created_at)%> ago | last updated: <%= time_ago_in_words(@article.updated_at)%>
-          ago
-        </small>
-        <br>
-        <small>Article created by <%= @article.user.username%></small>
               <br>
               <br>
         <p><%= @article.description%></p>
