--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,6 +13,10 @@
     <%= f.password_field :password%>  
   </p>
 
+  <p>
+    <%= f.label :about%><br>
+    <%= f.text_area  :about, class: "materialize-textarea", id: 'text-area'%>  
+  </p>
   <%= f.submit text, class: "btn pink"%>
   <br>
   <br>
