add pagination to all pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,3 +39,7 @@ textarea.materialize-textarea{height: 20rem;}
   flex-direction: row;
   flex-wrap: wrap;
 }
+
+.pagination li.active a {
+  color: #fff;
+}
