--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,9 @@
   <h3> Welcome to <%= @user.username %>'s page</h2>
   <%= gravatar_for @user, size: 150%>
   <h3><%= @user.username%> articles </h3>
-  <%= render 'articles/articles', obj: @user.articles%>
+  <%= will_paginate @user_articles%>
+  <%= render 'articles/articles', obj: @user_articles%>
+  <%= will_paginate @user_articles%>
 </div>
 
 
