--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,9 +3,16 @@
        <div class="nav-wrapper">
       <%= link_to 'AlphaBlog', root_path, class: "brand-logo" %>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><%= link_to 'New Article', new_article_path%></li>
         <li><%= link_to 'Articles', articles_path %></li>
-        <li><%= link_to 'Signup', signup_path %></li>
+        <li><%= link_to 'Writers', users_path %></li>
+        <%if logged_in? %>
+          <li><%= link_to 'New Article', new_article_path%></li>
+          <li><%= link_to 'Profile', user_path(current_user)%> </li>
+          <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to 'Signup', signup_path %></li>
+          <li><%= link_to 'Login', login_path %></li>
+        <%end%>
       </ul>
     </div>
     </div>
