--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,10 @@
 <div class="center-align">
   <h3> Welcome to <%= @user.username %>'s page</h2>
+  <% if current_user.id == @user.id%>
+    <%= link_to 'Edit Profile', edit_user_path(@user), class:'btn pink lighten-1'%>
+    <br>
+    <br>
+  <%end%>
   <%= gravatar_for @user, size: 150%>
   <h3><%= @user.username%> articles </h3>
   <%= will_paginate @user_articles%>
