--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -26,6 +26,6 @@
     </div>
   </div>
 </div>
-<%= link_to 'Back to articles', articles_path, class: "btn pink lighten-2"%>
+<%= link_to 'Back to articles', articles_path, class: "btn pink lighten-2 waves-effect waves-light"%>
 <br>
 <br>
