add final touches to admin privilege

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -11,5 +11,5 @@
     <%= f.text_area :description, class: "materialize-textarea" %>  
   </p>
 
-  <%= f.submit 'Submit', class: "btn pink"%>
+  <%= f.submit 'Submit', class: "btn pink waves-effect waves-light"%>
 <%end%>
