--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -2,6 +2,6 @@
 
 <%= render 'form'%>
 <br>
-<%= link_to 'Back to articles', articles_path, class: "btn lighten-1 pink"%> .
+<%= link_to 'Back to articles', articles_path, class: "btn lighten-1 pink waves-effect waves-light"%> .
 <br>
 <br>
