--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,7 +17,7 @@
     <%= f.label :about%><br>
     <%= f.text_area  :about, class: "materialize-textarea", id: 'text-area'%>  
   </p>
-  <%= f.submit text, class: "btn pink"%>
+  <%= f.submit text, class: "btn pink waves-effect waves-light"%>
   <br>
   <br>
 <%end%>
