--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,6 +2,6 @@
 
 <%= render 'form'%>
 <br>
-<%= link_to 'Back to articles', articles_path, class: "btn pink lighten-1"%>
+<%= link_to 'Back to articles', articles_path, class: "btn pink lighten-1 waves-effect waves-light"%>
 <br>
 <br>
