--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,7 +16,7 @@
         <p><%= @article.description%></p>
       </div>
       <div class="card-action">
-        <%if logged_in? && current_user == @article.user%>
+        <%if logged_in? && (current_user == @article.user || current_user.admin?)%>
           <%= link_to 'Edit article', edit_article_path(@article)%>
           <%= link_to 'Delete article', article_path(@article), method: :delete, data: { confirm: "Are you sure?" }%>
         <%else%>
