--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,6 +4,7 @@
       <%= link_to 'AlphaBlog', root_path, class: "brand-logo" %>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><%= link_to 'Articles', articles_path %></li>
+        <li><%= link_to 'Category', categories_path %></li>
         <li><%= link_to 'Writers', users_path %></li>
         <%if logged_in? %>
           <li><%= link_to 'New Article', new_article_path%></li>
